[fix] No css for :valid in contrast and generator [dev] Remove template-skelvanilla for less name

--- a/theme-button_awesome.less
+++ b/theme-button_awesome.less
@@ -31,6 +31,7 @@
 @import "@{bootstrap}/grid.less";
 @import "@{bootstrap}/tables.less";
 @import "@{bootstrap}/forms.less";
+@import "@{skelvanilla}/validity.less";
 @import "@{limesurvey}/buttons.less";
 
 // Components
@@ -60,10 +61,10 @@
 @import "@{skelvanilla}/template-core-base.less";
 
 // for skelvanilla
-@import "@{skelvanilla}/template-skelvanilla-base.less";
-@import "@{skelvanilla}/template-skelvanilla-nomoretable.less";
-@import "@{skelvanilla}/template-skelvanilla-radiocheckbox.less";
-@import "@{skelvanilla}/template-skelvanilla-awesome-checkbox.less";
+@import "@{skelvanilla}/base.less";
+@import "@{skelvanilla}/nomoretable.less";
+@import "@{skelvanilla}/radiocheckbox.less";
+@import "@{skelvanilla}/awesome-checkbox.less";
 
 // Components w/ JavaScript
 @import "@{bootstrap}/modals.less";
@@ -80,7 +81,7 @@
 
 // Slider
 @import '@{limesurvey}/slider-rules.less';
-@import '@{skelvanilla}/slider-skelvanilla.less';
+@import '@{skelvanilla}/slider.less';
 
 // Personnalisation
 @import "customize.less";
